--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,7 +16,7 @@
 .pagination a {
   color: black;
   float: left;
-  padding: 3px 5px;
+  padding: 3px 3px;
   text-decoration: none;
   border-radius: 5px;
 }
@@ -78,3 +78,35 @@
   transform: translate(-50%, -50%);
 }
 
+.istanaslide {
+  height: 600px !important;
+  min-height: 300px;
+  background: no-repeat center center scroll;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+#formpage {
+  width: 50px;
+  padding: 4px 5px;
+  margin: -5px 5px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 5px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  outline: none;
+  font-family: sans-serif;
+}
+
+#formpage :focus {
+  border: 2px solid #555;
+}
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
