--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -17,24 +17,24 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img class="d-block w-100" src="/media/{{ slide.slide1 }}" alt="First slide">
-              <div class="carousel-caption d-none d-md-block">
+              <!--div class="carousel-caption d-none d-md-block">
                 <h3>{{ slide.caption1 }}</h3>
                 <p>{{ slide.subcaption1 }}</p>
-              </div>
+              </div-->
             </div>
             <div class="carousel-item">
               <img class="d-block w-100" src="/media/{{ slide.slide2 }}" alt="Second slide">
-              <div class="carousel-caption d-none d-md-block">
+              <!--div class="carousel-caption d-none d-md-block">
                 <h3>{{ slide.caption2 }}</h3>
                 <p>{{ slide.subcaption2 }}</p>
-              </div>
+              </div-->
             </div>
             <div class="carousel-item">
               <img class="d-block w-100" src="/media/{{ slide.slide3 }}" alt="Third slide">
-              <div class="carousel-caption d-none d-md-block">
+              <!--div class="carousel-caption d-none d-md-block">
                 <h3>{{ slide.caption3 }}</h3>
                 <p>{{ slide.subcaption3 }}</p>
-              </div>
+              </div-->
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
