perbaikan fungsi filter

--- a/singgasanaseni/templates/karya/detail.html
+++ b/singgasanaseni/templates/karya/detail.html
@@ -23,7 +23,7 @@
 </article-->
 <article>
 <div class="row bgkarya">
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-md-8">
                 <img class="col-12 col-sm-8 col-md-10 px-0" src="/media/{{ Karya.Gambar }}" alt="">
