--- a/singgasanaseni/templates/karya/kriya.html
+++ b/singgasanaseni/templates/karya/kriya.html
@@ -9,12 +9,21 @@
           <div class="row">
             <div class="col-md-12 sectionkoleksi">
               <span class="divkoleksi divkarya">
-                <h3>Koleksi > Lukisan</h3>
+                <h3>Koleksi > Kriya</h3>
               </span>
               <div class="sectionfilter">
                 <div class="filterkarya">
                   <label class="filtermenu" style="padding: 0; font-size: smaller; color: #3c4a50">Filter</label>
 
+                <!--form method="get">
+                {{ filter.form.as_p }}
+                <button type="submit">Search</button>
+                </form>
+                <ul>
+                {% for jenis in filter.qs %}
+                <li>{{ jenis.Jenis }}</li>
+                {% endfor %}
+                </ul-->
 
                   <div class="filtermenu jeniskarya " method="get">
                     <a id="link1">Jenis benda seni +</a>
@@ -24,16 +33,17 @@
                       <li value="Kriya"><a href="{% url 'kriya-list' %}">Kriya</a></li>
                     </ul>
                   </div>
-                  <div class="filtermenu temakarya">
+                  <!--div class="filtermenu temakarya">
                     <a id="link2">Tema +</a>
                     <ul id="jenistema" class="jenisbenda">
-                     <li><a href="{% url 'potret-list' %}">Potret dan Sensualitas</a></li>
-                      <li><a href="{% url 'alam-list' %}">Alam dan Benda</a></li>
-                      <li><a href="{% url 'alamkota-list' %}">Pemandangan Alam dan Kota</a></li>
-                      <li><a href="{% url 'juang-list' %}">Perjuangan dan Potret Para Pejuang</a></li>
-                      <li><a href="{% url 'tradisi-list' %}">Tradisi/Budaya/Mitologi/Keseharian</a></li>
+                      <li><a href="#">Potret dan Sensualitas</a></li>
+                      <li><a href="#">Alam dan Benda</a></li>
+                      <li><a href="#">Pemandangan Alam dan Kota</a></li>
+                      <li><a href="#">Perjuangan dan Potret Para Pejuang</a></li>
+                      <li><a href="#">Tradisi/Budaya/Mitologi/Keseharian</a></li>
+                      <li><a href="#">Patung dan Kriya</a></li>
                     </ul>
-                  </div>
+                  </div-->
 
                 </div>
                 <div class="formsearchkarya">
