--- a/singgasanaseni/templates/perupa/index.html
+++ b/singgasanaseni/templates/perupa/index.html
@@ -19,34 +19,34 @@
                 <div class="filterkarya">
                   <label class="filtermenu" style="padding: 0;">Filter</label>
                   <!--filter-->
-                  <div class="filtermenu portfolioFilter">
-                    <a href="#" data-filter="*" class="current">ALL</a>
-                    <a href="#" data-filter=".a">A</a>
-                    <a href="#" data-filter=".b">B</a>
-                    <a href="#" data-filter=".c">C</a>
-                    <a href="#" data-filter=".d">D</a>
-                    <a href="#" data-filter=".e">E</a>
-                    <a href="#" data-filter=".f">F</a>
-                    <a href="#" data-filter=".g">G</a>
-                    <a href="#" data-filter=".h">H</a>
-                    <a href="#" data-filter=".i">I</a>
-                    <a href="#" data-filter=".j">J</a>
-                    <a href="#" data-filter=".k">K</a>
-                    <a href="#" data-filter=".l">L</a>
-                    <a href="#" data-filter=".m">M</a>
-                    <a href="#" data-filter=".n">N</a>
-                    <a href="#" data-filter=".o">O</a>
-                    <a href="#" data-filter=".p">P</a>
-                    <a href="#" data-filter=".q">Q</a>
-                    <a href="#" data-filter=".r">R</a>
-                    <a href="#" data-filter=".s">S</a>
-                    <a href="#" data-filter=".t">T</a>
-                    <a href="#" data-filter=".u">U</a>
-                    <a href="#" data-filter=".v">V</a>
-                    <a href="#" data-filter=".w">W</a>
-                    <a href="#" data-filter=".x">X</a>
-                    <a href="#" data-filter=".y">Y</a>
-                    <a href="#" data-filter=".z">Z</a>
+                  <div class="filtermenu">
+                    <a href="{% url 'Perupa-list' %}" class="current">ALL</a>
+                    <a href="{% url 'A-list' %}">A</a>
+                    <a href="{% url 'B-list' %}">B</a>
+                    <a href="{% url 'C-list' %}">C</a>
+                    <a href="{% url 'D-list' %}">D</a>
+                    <a href="{% url 'E-list' %}">E</a>
+                    <a href="{% url 'F-list' %}">F</a>
+                    <a href="{% url 'G-list' %}" >G</a>
+                    <a href="{% url 'H-list' %}" >H</a>
+                    <a href="{% url 'I-list' %}" >I</a>
+                    <a href="{% url 'J-list' %}" >J</a>
+                    <a href="{% url 'K-list' %}" >K</a>
+                    <a href="{% url 'L-list' %}" >L</a>
+                    <a href="{% url 'M-list' %}" >M</a>
+                    <a href="{% url 'N-list' %}" >N</a>
+                    <a href="{% url 'O-list' %}" >O</a>
+                    <a href="{% url 'P-list' %}" >P</a>
+                    <a href="{% url 'Q-list' %}" >Q</a>
+                    <a href="{% url 'R-list' %}" >R</a>
+                    <a href="{% url 'S-list' %}" >S</a>
+                    <a href="{% url 'T-list' %}" >T</a>
+                    <a href="{% url 'U-list' %}" >U</a>
+                    <a href="{% url 'V-list' %}" >V</a>
+                    <a href="{% url 'W-list' %}" >W</a>
+                    <a href="{% url 'X-list' %}" >X</a>
+                    <a href="{% url 'Y-list' %}" >Y</a>
+                    <a href="{% url 'Z-list' %}" >Z</a>
                   </div>
                 </div>
                 <div class="formsearchkarya">
@@ -65,7 +65,7 @@
               <span class="divkoleksi" style="border: none;">
                 <span class="pagingkarya">
                     <ul class="pagination">
-                        {% if karya.has_previous %}
+                        {% if perupa.has_previous %}
                             <a href="?page={{ perupa.previous_page_number }}" style="width: 20px; height: auto">{% svg 'back' %}</a>
                         {% endif %}
 
@@ -74,7 +74,7 @@
                     </form>  <p style="margin-top: auto; margin-bottom: auto;">of {{ perupa.paginator.num_pages }}</p>
 
 
-                        {% if karya.has_next %}
+                        {% if perupa.has_next %}
                             <a href="?page={{ perupa.next_page_number }}" style="width: 20px; height: auto">{% svg 'next' %}</a>
                         {% endif %}
                      </ul>
