--- a/singgasanaseni/templates/base.html
+++ b/singgasanaseni/templates/base.html
@@ -27,6 +27,10 @@
     <link href="{% static 'css/stylish-portfolio.min.css' %}" rel="stylesheet">
     <script src="{% static 'js/modernizr.custom.js' %}"></script>
 
+    {% block css %}
+`
+    {% endblock %}
+
   </head>
 
    <body id="page-top">
