--- a/singgasanaseni/templates/karya/detail.html
+++ b/singgasanaseni/templates/karya/detail.html
@@ -2,31 +2,20 @@
 
 {% load static %}
 
-{% block content %}
-<!--article>
-    <div class="container">
-        <div class="row bgkarya">
-            <div class="col-md-12 ">
-                    <div class="col-md-10 profil">
-                        <img class="col-12 col-sm-2 col-md-10 px-0" src="/media/{{ Karya.Gambar }}">
-                    </div>
+{% block css %}
+<link href="{% static 'css/detail.css' %}" rel="stylesheet">
+{% endblock %}
 
-                    <div class="col-md-2">
-                        <h5>{{ Karya.Judul }}</h5><br>
-                        <p>{{ Karya.Perupa }}</p><br>
-                        <p>{{ Karya.Dimensi }}</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</article-->
+{% block content %}
+
+
+
 <article>
-<div class="row bgkarya">
+<div class="row">
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-8">
-                <img class="col-12 col-sm-8 col-md-10 px-0" src="/media/{{ Karya.Gambar }}" alt="">
+                <img class="col-12 col-sm-8 col-md-10 px-0 imgdetail img-responsive " src="/media/{{ Karya.Gambar }}" alt="">
             </div>
             <div class="col-md-3">
                 <div class="centered">
