--- a/singgasanaseni/templates/perupa/index.html
+++ b/singgasanaseni/templates/perupa/index.html
@@ -2,7 +2,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% load svg %}
-<!DOCTYPE html>
+
 
 
 
@@ -20,7 +20,7 @@
                   <label class="filtermenu" style="padding: 0;">Filter</label>
                   <!--filter-->
                   <div class="filtermenu">
-                    <a href="{% url '-list' %}" class="current">ALL</a>
+                    <a href="{% url 'Perupa-list' %}" class="current">ALL</a>
                     <a href="{% url 'A-kriya' %}">A</a>
                     <a href="{% url 'B-list' %}">B</a>
                     <a href="{% url 'C-list' %}">C</a>
