perbaikan fungsi search

--- a/singgasanaseni/templates/karya/index.html
+++ b/singgasanaseni/templates/karya/index.html
@@ -39,7 +39,7 @@
                 <div class="formsearchkarya">
                   <form method="GET" action="">
                     <input type="text" name="q" placeholder="Search collection and artist">
-                    <i class="fa fa-search" aria-hidden="true"></i>
+                    <i class="fa fa-search" id="filsearch" aria-hidden="true"></i>
                   </a>
                 </form>
                 </div>
