--- a/singgasanaseni/templates/perupa/detail.html
+++ b/singgasanaseni/templates/perupa/detail.html
@@ -54,10 +54,9 @@
                     <a href="/karya/{{ karya.id }}" class="sample1">
                       <img src="/media/{{ karya.Gambar }}" class="">
                         <figcaption>
-                           <h3>{{ karya.Perupa }}</h3>
+                           <h3>{{ karya.Judul }}</h3>
                             <p>
-                              <i>{{ karya.Judul }}</i><Br>
-                              {{ karya.Kategori }}<br>
+                              <i>{{ karya.Perupa }}</i><Br>
                               {{ karya.Material }}<br>
                              {{ karya.Dimensi }}
                             </p>
