--- a/singgasanaseni/templates/search/view.html
+++ b/singgasanaseni/templates/search/view.html
@@ -1,33 +1,37 @@
 {% extends "base.html" %}
 {% load class_name %}
+{% load static %}
+
+{% block css %}
+<link href="{% static 'css/detail.css' %}" rel="stylesheet">
+{% endblock %}
+
 {% block content %}
 
 <div class="container">
-
     <div class="container">
-        <div class='col-12 col-md-6 mx-auto my-5 py-5'>
-            <form method='GET' class='' action='.'>
-
-                <div class="input-group form-group-no-border mx-auto" style="margin-bottom: 0px; font-size: 32px;">
-                    <span class="input-group-addon cfe-nav" style='color:#000'>
-                        <i class="fa fa-search" aria-hidden="false"></i>
-                    </span>
-                    <input type="text" name="q"  data-content="Press enter to search" class="form-control cfe-nav mt-0 py-3" placeholder="Search..." value="" >
-                </div>
-
-            </form>
-        </div>
-
-
-        <div class='row title-row my-5'>
-            <div class='col-12 py-0'>
-                <h3 class='my-0 py-0'>{{ count }} results for <b>{{ query }}</b></h3>
+            <div class="search py-5 my-5">
+                <form method='GET' class='' action='.'>
+                <input type="text" name="q" class="searchTerm" placeholder="What are you looking for?">
+                    <button type="submit" class="searchButton">
+                        <i class="fa fa-search"></i>
+                    </button>
             </div>
+    </div>
+</div>
+
+
+
+        <div class='row '>
+            <div class='col-md-12 py-5'>
+                <h3 class='my-0 py-0' style="text-align: center" id="searchresult" >{{ count }} results for <b>{{ query }}</b></h3>
+            </div>
+
         </div>
         <hr>
-    </div>
 
-    <div class="container">
+
+<div class="container">
     {% for object in object_list %}
         {% with object|class_name as klass %}
           {% if klass == 'perupa' %}
@@ -40,7 +44,7 @@
                         </a>
                     </div>
                     <div class="col-md-7">
-                        <label><a href="/perupa/{{ object.id }}">{{ object.Panggilan }}</a></label>
+                        <h4><a href="/perupa/{{ object.id }}">{{ object.Panggilan }}</a></h4>
                         <p>{{ object.Tanggal_Lahir |date:"d M Y" }} - {{ object.Tanggal_Wafat |date:"d M Y" }}</p>
                     </div>
                 </div>
@@ -56,7 +60,7 @@
                         </a>
                     </div>
                     <div class="col-md-7">
-                        <label><a href="/karya/{{ object.id }}">{{ object.Judul }}</a></label>
+                        <h4><a href="/karya/{{ object.id }}">{{ object.Judul }}</a></h4>
                         <p>{{ object.Perupa }}<br>
                         {{ object.Dimensi }}<br>
                         {{ object.Material }}</p>
@@ -74,7 +78,7 @@
                         </a>
                     </div>
                     <div class="col-md-7">
-                        <label><a href="/berita/#{{ object.Judul | slugify }}">{{ object.Judul }}</a></label>
+                        <h4><a href="/berita/#{{ object.Judul | slugify }}">{{ object.Judul }}</a></h4>
                         <p style="word-wrap: break-word;">{{ object.Sumber }} - {{ object.Isiberita | truncatechars:"100"}}<a href="/berita/#{{ object.Judul }}"> Read More</a></p>
 
                     </div>
@@ -110,16 +114,3 @@
 
 
 
-<div class='row'>
-    <div class='col-12 col-md-6 mx-auto my-5 py-5'>
-        <form method='GET' class='' action='.'>
-
-            <div class="input-group form-group-no-border mx-auto" style="margin-bottom: 0px; font-size: 32px;">
-                <span class="input-group-addon cfe-nav" style='color:#000'>
-                    <i class="fa fa-search" aria-hidden="false"></i>
-                </span>
-                <input type="text" name="q"  data-content="Press enter to search" class="form-control cfe-nav mt-0 py-3" placeholder="Search..." value="" >
-            </div>
-
-        </form>
-    </div>
