--- a/singgasanaseni/templates/karya/detail.html
+++ b/singgasanaseni/templates/karya/detail.html
@@ -11,13 +11,13 @@
 
 
 <article>
-<div class="row">
-    <div class="container-fluid">
+
+    <div class="container" style= "max-height: 600px; max-width: 100%">
         <div class="row">
-            <div class="col-md-8">
-                <img class="col-12 col-sm-8 col-md-10 px-0 imgdetail img-responsive " src="/media/{{ Karya.Gambar }}" alt="">
+            <div class="col-md-6">
+                <img class=" imgdetail " src="/media/{{ Karya.Gambar }}" alt="">
             </div>
-            <div class="col-md-3">
+            <div class="col-md-6">
                 <div class="centered">
                     <h5>{{ Karya.Judul }}</h5>
                     <p><a href="/perupa/{{ Karya.Perupa_id }}">{{ Karya.Perupa }}</a></p>
@@ -28,7 +28,7 @@
             </div>
         </div>
     </div>
-</div>
+
 </article>
 {% endblock %}
 
