--- a/static/css/detail.css
+++ b/static/css/detail.css
@@ -11,11 +11,14 @@ footer {
 }
 
 .imgdetail {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    padding-top: 10px;
+    display: inline-block;
+    width: 100%;
+    object-fit: contain;
     max-height: 700px;
+    alignment: center;
+    padding-top: 10px;
+
+
 
 }
 
@@ -34,9 +37,9 @@ footer {
 }
 
 .searchTerm {
-  float: left;
+  float: top;
   width: 100%;
-  border: 3px solid grey;
+  border: 2px solid grey;
   padding: 5px;
   height: 36px;
   border-radius: 5px;
@@ -50,7 +53,7 @@ footer {
 
 .searchButton {
   position: absolute;
-  right: -50px;
+  right: -30px;
   width: 40px;
   height: 36px;
   border: 1px solid grey;
