--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -18,22 +18,24 @@
             <div class="carousel-item active">
               <img class="d-block w-100" src="/media/{{ slide.slide1 }}" alt="First slide">
               <div class="carousel-caption d-none d-md-block">
-                <h3>{{ slide.caption1 }}</h3>
-                <p>{{ slide.subcaption1 }}</p>
+                <!--h3>{{ slide.caption1 }}</h3>
+                <p>{{ slide.subcaption1 }}</p-->
               </div>
             </div>
             <div class="carousel-item">
               <img class="d-block w-100" src="/media/{{ slide.slide2 }}" alt="Second slide">
               <div class="carousel-caption d-none d-md-block">
-                <h3>{{ slide.caption2 }}</h3>
-                <p>{{ slide.subcaption2 }}</p>
+                <!--h3>{{ slide.caption2 }}</h3>
+                <p>{{ slide.subcaption2 }}</p-->
               </div>
             </div>
             <div class="carousel-item">
               <img class="d-block w-100" src="/media/{{ slide.slide3 }}" alt="Third slide">
               <div class="carousel-caption d-none d-md-block">
-                <h3>{{ slide.caption3 }}</h3>
-                <p>{{ slide.subcaption3 }}</p>
+                  <!--a href="{{ slide.link3 }}">
+                    <h3>{{ slide.caption3 }}</h3>
+                    <p>{{ slide.subcaption3 }}</p>
+                 </a-->
               </div>
             </div>
           </div>
