--- a/homepage/templates/enindex.html
+++ b/homepage/templates/enindex.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "enbase.html" %}
 
 {% load static %}
 
@@ -58,7 +58,7 @@
           <div class="row ">
             <div class="col-md-12 sectionkoleksi">
               <span class="divkoleksi">
-                <h3>Koleksi</h3>
+                <h3>Collections</h3>
                 <a href="{% url 'karya-list' %}">View All</a>
               </span>
             </div>
